{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 70,
  "lineage": "488904ff-ba04-0ec1-45f9-57927030c34e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ElasticIpR1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0588696e8ef09749a",
            "arn": "arn:aws:ec2:us-east-1:845537495355:elastic-ip/eipalloc-0588696e8ef09749a",
            "domain": "vpc",
            "id": "eipalloc-0588696e8ef09749a",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-206-183-39.compute-1.amazonaws.com",
            "public_ip": "44.206.183.39",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "ElasticIpForNatGatewayR1"
            },
            "tags_all": {
              "Name": "ElasticIpForNatGatewayR1"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ElasticIpR2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].SecondRegion",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f3b792effcf1f514",
            "arn": "arn:aws:ec2:us-east-2:845537495355:elastic-ip/eipalloc-0f3b792effcf1f514",
            "domain": "vpc",
            "id": "eipalloc-0f3b792effcf1f514",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-13-194-35.us-east-2.compute.amazonaws.com",
            "public_ip": "3.13.194.35",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "ElasticIpForNatGatewayR2"
            },
            "tags_all": {
              "Name": "ElasticIpForNatGatewayR2"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "CustomInternetGatewayR1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:845537495355:internet-gateway/igw-0dd7601722b653adb",
            "id": "igw-0dd7601722b653adb",
            "owner_id": "845537495355",
            "tags": {
              "Name": "MyGatewayR1"
            },
            "tags_all": {
              "Name": "MyGatewayR1"
            },
            "vpc_id": "vpc-07c303fe6f8188072"
          },
          "dependencies": [
            "aws_vpc.CustomVpcR1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "CustomInternetGatewayR2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].SecondRegion",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:845537495355:internet-gateway/igw-0743f0186b276d66c",
            "id": "igw-0743f0186b276d66c",
            "owner_id": "845537495355",
            "tags": {
              "Name": "MyGatewayR2"
            },
            "tags_all": {
              "Name": "MyGatewayR2"
            },
            "vpc_id": "vpc-0df6119d2920e6b4e"
          },
          "dependencies": [
            "aws_vpc.CustomVpcR2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "CustomNatGatewayR1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0588696e8ef09749a",
            "association_id": "eipassoc-0c4b527eb34e47f48",
            "connectivity_type": "public",
            "id": "nat-07f5c8b908e7453a1",
            "network_interface_id": "eni-0ac5fbb9fce8b2df1",
            "private_ip": "10.0.0.231",
            "public_ip": "44.206.183.39",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0c758ff0eb708a356",
            "tags": {
              "Name": "MyNatGatewayR1"
            },
            "tags_all": {
              "Name": "MyNatGatewayR1"
            }
          },
          "dependencies": [
            "aws_eip.ElasticIpR1",
            "aws_subnet.CustomPublicSubnet1R1",
            "aws_vpc.CustomVpcR1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "CustomNatGatewayR2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].SecondRegion",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f3b792effcf1f514",
            "association_id": "eipassoc-03fa5b3be0476ddd8",
            "connectivity_type": "public",
            "id": "nat-0eb2473a159c8a543",
            "network_interface_id": "eni-06d4c07fb96196b6f",
            "private_ip": "20.0.0.4",
            "public_ip": "3.13.194.35",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0d999011db8f1b539",
            "tags": {
              "Name": "MyNatGatewayR2"
            },
            "tags_all": {
              "Name": "MyNatGatewayR2"
            }
          },
          "dependencies": [
            "aws_eip.ElasticIpR2",
            "aws_subnet.CustomPublicSubnet1R2",
            "aws_vpc.CustomVpcR2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "CustomerPrivateRouteTableR1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:845537495355:route-table/rtb-082304f8ccfc4003d",
            "id": "rtb-082304f8ccfc4003d",
            "owner_id": "845537495355",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-07f5c8b908e7453a1",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "local",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "20.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-0774d5e52b4188d97"
              }
            ],
            "tags": {
              "Name": "PrivateRouteTable"
            },
            "tags_all": {
              "Name": "PrivateRouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-07c303fe6f8188072"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.ElasticIpR1",
            "aws_nat_gateway.CustomNatGatewayR1",
            "aws_subnet.CustomPublicSubnet1R1",
            "aws_vpc.CustomVpcR1",
            "aws_vpc.CustomVpcR2",
            "aws_vpc_peering_connection.myPeeringConnection"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "CustomerPrivateRouteTableR2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].SecondRegion",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:845537495355:route-table/rtb-0ba20b1c6570f76b6",
            "id": "rtb-0ba20b1c6570f76b6",
            "owner_id": "845537495355",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0eb2473a159c8a543",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-0774d5e52b4188d97"
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "20.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "local",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PrivateRouteTableR2"
            },
            "tags_all": {
              "Name": "PrivateRouteTableR2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0df6119d2920e6b4e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.ElasticIpR2",
            "aws_nat_gateway.CustomNatGatewayR2",
            "aws_subnet.CustomPublicSubnet1R2",
            "aws_vpc.CustomVpcR1",
            "aws_vpc.CustomVpcR2",
            "aws_vpc_peering_connection.myPeeringConnection"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "CustomerPublicRouteTableR1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:845537495355:route-table/rtb-0c8c4bb213c6662e7",
            "id": "rtb-0c8c4bb213c6662e7",
            "owner_id": "845537495355",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0dd7601722b653adb",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "local",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "20.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-0774d5e52b4188d97"
              }
            ],
            "tags": {
              "Name": "PublicRouteTableR1"
            },
            "tags_all": {
              "Name": "PublicRouteTableR1"
            },
            "timeouts": null,
            "vpc_id": "vpc-07c303fe6f8188072"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.CustomInternetGatewayR1",
            "aws_vpc.CustomVpcR1",
            "aws_vpc.CustomVpcR2",
            "aws_vpc_peering_connection.myPeeringConnection"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "CustomerPublicRouteTableR2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].SecondRegion",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:845537495355:route-table/rtb-05ca0ef96ed8a0f18",
            "id": "rtb-05ca0ef96ed8a0f18",
            "owner_id": "845537495355",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0743f0186b276d66c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-0774d5e52b4188d97"
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "20.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "local",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PublicRouteTableR2"
            },
            "tags_all": {
              "Name": "PublicRouteTableR2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0df6119d2920e6b4e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.CustomInternetGatewayR2",
            "aws_vpc.CustomVpcR1",
            "aws_vpc.CustomVpcR2",
            "aws_vpc_peering_connection.myPeeringConnection"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PrivateAssociationPrivateSubnet1R1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c721adb4ed1c4b1b",
            "route_table_id": "rtb-082304f8ccfc4003d",
            "subnet_id": "subnet-09ba318481a41d588"
          },
          "dependencies": [
            "aws_eip.ElasticIpR1",
            "aws_nat_gateway.CustomNatGatewayR1",
            "aws_route_table.CustomerPrivateRouteTableR1",
            "aws_subnet.CustomPrivateSubnet1R1",
            "aws_subnet.CustomPublicSubnet1R1",
            "aws_vpc.CustomVpcR1",
            "aws_vpc.CustomVpcR2",
            "aws_vpc_peering_connection.myPeeringConnection"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PrivateAssociationPrivateSubnet1R2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].SecondRegion",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fd2ee833a87f5173",
            "route_table_id": "rtb-0ba20b1c6570f76b6",
            "subnet_id": "subnet-004395e7eb7ed8c77"
          },
          "dependencies": [
            "aws_eip.ElasticIpR2",
            "aws_nat_gateway.CustomNatGatewayR2",
            "aws_route_table.CustomerPrivateRouteTableR2",
            "aws_subnet.CustomPrivateSubnet1R2",
            "aws_subnet.CustomPublicSubnet1R2",
            "aws_vpc.CustomVpcR1",
            "aws_vpc.CustomVpcR2",
            "aws_vpc_peering_connection.myPeeringConnection"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PublicAssociationPublicSubnet1R1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f5586a43ed1f2b65",
            "route_table_id": "rtb-0c8c4bb213c6662e7",
            "subnet_id": "subnet-0c758ff0eb708a356"
          },
          "dependencies": [
            "aws_internet_gateway.CustomInternetGatewayR1",
            "aws_route_table.CustomerPublicRouteTableR1",
            "aws_subnet.CustomPublicSubnet1R1",
            "aws_vpc.CustomVpcR1",
            "aws_vpc.CustomVpcR2",
            "aws_vpc_peering_connection.myPeeringConnection"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PublicAssociationPublicSubnet1R2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].SecondRegion",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-030a5c17d9a8d4cfd",
            "route_table_id": "rtb-05ca0ef96ed8a0f18",
            "subnet_id": "subnet-0d999011db8f1b539"
          },
          "dependencies": [
            "aws_internet_gateway.CustomInternetGatewayR2",
            "aws_route_table.CustomerPublicRouteTableR2",
            "aws_subnet.CustomPublicSubnet1R2",
            "aws_vpc.CustomVpcR1",
            "aws_vpc.CustomVpcR2",
            "aws_vpc_peering_connection.myPeeringConnection"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "CustomPrivateSubnet1R1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:845537495355:subnet/subnet-09ba318481a41d588",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09ba318481a41d588",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "845537495355",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PrivateSubnet1R1"
            },
            "tags_all": {
              "Name": "PrivateSubnet1R1"
            },
            "vpc_id": "vpc-07c303fe6f8188072"
          },
          "dependencies": [
            "aws_vpc.CustomVpcR1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "CustomPrivateSubnet1R2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].SecondRegion",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:845537495355:subnet/subnet-004395e7eb7ed8c77",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "20.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-004395e7eb7ed8c77",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "845537495355",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PrivateSubnet1R2"
            },
            "tags_all": {
              "Name": "PrivateSubnet1R2"
            },
            "vpc_id": "vpc-0df6119d2920e6b4e"
          },
          "dependencies": [
            "aws_vpc.CustomVpcR2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "CustomPublicSubnet1R1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:845537495355:subnet/subnet-0c758ff0eb708a356",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c758ff0eb708a356",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "845537495355",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PublicSubnet1R1"
            },
            "tags_all": {
              "Name": "PublicSubnet1R1"
            },
            "vpc_id": "vpc-07c303fe6f8188072"
          },
          "dependencies": [
            "aws_vpc.CustomVpcR1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "CustomPublicSubnet1R2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].SecondRegion",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:845537495355:subnet/subnet-0d999011db8f1b539",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "20.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d999011db8f1b539",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "845537495355",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PublicSubnet1R2"
            },
            "tags_all": {
              "Name": "PublicSubnet1R2"
            },
            "vpc_id": "vpc-0df6119d2920e6b4e"
          },
          "dependencies": [
            "aws_vpc.CustomVpcR2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "CustomVpcR1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:845537495355:vpc/vpc-07c303fe6f8188072",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0170b1f1017ff3130",
            "default_route_table_id": "rtb-06e0fc05ee9729337",
            "default_security_group_id": "sg-053a4baffa9be9adc",
            "dhcp_options_id": "dopt-054fcc2e14f4210ae",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07c303fe6f8188072",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06e0fc05ee9729337",
            "owner_id": "845537495355",
            "tags": {
              "Name": "MyVpcR1"
            },
            "tags_all": {
              "Name": "MyVpcR1"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "CustomVpcR2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].SecondRegion",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:845537495355:vpc/vpc-0df6119d2920e6b4e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "20.0.0.0/16",
            "default_network_acl_id": "acl-0e9b28cc762b727bf",
            "default_route_table_id": "rtb-0c6e3bd83fb417ce3",
            "default_security_group_id": "sg-0d993bf8ed23042fe",
            "dhcp_options_id": "dopt-06594b055ba8674d5",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0df6119d2920e6b4e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c6e3bd83fb417ce3",
            "owner_id": "845537495355",
            "tags": {
              "Name": "MyVpcR2"
            },
            "tags_all": {
              "Name": "MyVpcR2"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "myPeeringConnection",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "pending-acceptance",
            "id": "pcx-0774d5e52b4188d97",
            "peer_owner_id": "845537495355",
            "peer_region": "us-east-2",
            "peer_vpc_id": "vpc-0df6119d2920e6b4e",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "vpc_id": "vpc-07c303fe6f8188072"
          },
          "dependencies": [
            "aws_vpc.CustomVpcR1",
            "aws_vpc.CustomVpcR2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection_accepter",
      "name": "peer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].SecondRegion",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-0774d5e52b4188d97",
            "peer_owner_id": "845537495355",
            "peer_region": "us-east-2",
            "peer_vpc_id": "vpc-0df6119d2920e6b4e",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "tags": {
              "Side": "Accepter"
            },
            "tags_all": {
              "Side": "Accepter"
            },
            "vpc_id": "vpc-07c303fe6f8188072",
            "vpc_peering_connection_id": "pcx-0774d5e52b4188d97"
          },
          "dependencies": [
            "aws_vpc.CustomVpcR1",
            "aws_vpc.CustomVpcR2",
            "aws_vpc_peering_connection.myPeeringConnection"
          ]
        }
      ]
    }
  ]
}